--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<script src="/socket.io.js" defer></script>
 		<script src="audioManager.js" type="text/javascript" charset="utf-8" ></script>
-		<script src="client.js" type="text/javascript" charset="utf-8" defer></script>
+		<script src="client2.js" type="text/javascript" charset="utf-8" defer></script>
 
 		<title>Cartoucheur</title>
 
