--- a/test.html
+++ b/test.html
@@ -74,15 +74,15 @@ salutcc.prototype.play = function(){
   }
 </style>
 <script>
-  var crash = new audioManager("/tracks/crash.mp3", true);
-  var hh = new audioManager("/tracks/hh.mp3", true);
-  var kick = new audioManager("/tracks/kick.mp3", true);
-  var sn = new audioManager("/tracks/sn.mp3", true);
-  var tom1 = new audioManager("/tracks/tom1.mp3", true);
-  var tom2 = new audioManager("/tracks/tom2.mp3", true);
-  var tom3 = new audioManager("/tracks/tom3.mp3", true);
-  var tom0 = new audioManager("/tracks/tom0.mp3", true);
-  var ride = new audioManager("/tracks/ride.mp3", true);
+  var crash = new audioManager("./tracks/crash.mp3", true);
+  var hh = new audioManager("./tracks/hh.mp3", true);
+  var kick = new audioManager("./tracks/kick.mp3", true);
+  var sn = new audioManager("./tracks/sn.mp3", true);
+  var tom1 = new audioManager("./tracks/tom1.mp3", true);
+  var tom2 = new audioManager("./tracks/tom2.mp3", true);
+  var tom3 = new audioManager("./tracks/tom3.mp3", true);
+  var tom0 = new audioManager("./tracks/tom0.mp3", true);
+  var ride = new audioManager("./tracks/ride.mp3", true);
 
   var samples = document.getElementsByClassName("sample");
     for (var i = samples.length - 1; i >= 0; i--) {
