--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 	</head>
 	<body>
 		<div id="pad">
+
+			<noscript>
+				Pour accéder à toutes les fonctionnalités de ce site, vous devez activer JavaScript.
+				Voici les <a href="http://www.enable-javascript.com/fr/" target="_blank">
+				instructions pour activer JavaScript dans votre navigateur Web</a>.
+			</noscript>
 			<div class="col" id="col1"></div>
 			<div class="col" id="col2"></div>
 			<div class="col" id="col3"></div>
@@ -30,6 +36,10 @@
 				<div class="j" onclick="getTracklist(tracklistUrl);">Reload tracklist</div>
 				<a href="./test.html">Test</a>
 				<input type="range"  min="0" max="1" step="0.01" onchange="window.gainNode.gain.value = this.value">
+				<form   id="loadTrackList">
+					<input type="text" placeholder="playlist">
+					<input type="submit" value="Load">
+				</form>
 			</div>
 			<canvas id="canvas" width="512" height="100" style="position: fixed; left: 511px; bottom: -1px;"></canvas>
 		</div>
